// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`did-ckb-ts it should re-create the local id extension example: local-id 1`] = `"did:plc:bxvfvvygwbcnbmknn73t6pbu"`;

exports[`did-ckb-ts it should re-create the local id extension example: local-id-migration-tx 1`] = `
{
  "cellDeps": [
    {
      "depType": "code",
      "outPoint": {
        "index": "0x0",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
    {
      "depType": "code",
      "outPoint": {
        "index": "0x1",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
  ],
  "headerDeps": [],
  "inputs": [
    {
      "previousOutput": {
        "index": "0x2",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
      "since": "0x0",
    },
  ],
  "outputs": [
    {
      "capacity": "0x258",
      "lock": {
        "args": "0x",
        "codeHash": "0x3dc9cdb5b2dcff8d4999004406558d4456ecf0f14c757ca353684c0bd4d3b50d",
        "hashType": "type",
      },
      "type": {
        "args": "0x8434cfe81aa825c275d513eee20e4235294e3420",
        "codeHash": "0xb95123c71a870e3f0f74a7ee1dab8268dbfbc1407b46733ebd1b41f854b4324a",
        "hashType": "type",
      },
    },
  ],
  "outputsData": [
    "0x00000000d80000000c000000b4000000a4000000a3687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747468747470733a2f2f6578616d706c652e746573746b616c736f4b6e6f776e4173816f61743a2f2f616c6963652e7465737473766572696669636174696f6e4d6574686f6473a167617470726f746f736469643a6b65793a7a5369676e696e674b6579200000006469643a706c633a62787666767679677762636e626d6b6e6e37337436706275",
  ],
  "version": "0x0",
  "witnesses": [
    "0x4c0200001000000010000000100000003802000038020000080000003002000010000000e60100002a020000d601000008000000ca010000a76373696778564c2d6b72665f6f385f4b4a5754362d51316532572d52466252443777313564575f4e4b726b6d5f634c2d355147346b5f70736270714a5f314f48626a3034716a70764f70724143507357384765582d6e5253433030416470726576f664747970656d706c635f6f7065726174696f6e687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747368747470733a2f2f6578616d706c652e636f6d6b616c736f4b6e6f776e4173817661743a2f2f616c6963652e6578616d706c652e636f6d6c726f746174696f6e4b6579738278396469643a6b65793a7a5133736859314d5351545a6f584431505370616a566237487642734841754a69455039354271426b5358316d6365794278396469643a6b65793a7a446e616570684464367a5a4c433353397873536e6b7579784b39316d62663467654e53666e6a334c715a65666158693373766572696669636174696f6e4d6574686f6473a167617470726f746f78396469643a6b65793a7a513373686e6d517963716d38344d684c48544a6675614a6843326a66774a69597a697a784c6162574e466269796d5154400000000b870938facdec00272e48435fde929beb2194cf32374ff5de6e678c572319d100aa175c346eda92d54fac45b84a4160f0a7808c4f4106b82f041cba3baf1b87020000000000",
  ],
}
`;

exports[`did-ckb-ts it should re-create the local id extension example: local-id-migration-tx-hash 1`] = `"0xcb86447276a89c20276a667ada34640341e9e9ea47b68548241a934ff49e9fea"`;

exports[`did-ckb-ts it should re-create the local id extension example: plc-genesis-op 1`] = `
{
  "alsoKnownAs": [
    "at://alice.example.com",
  ],
  "prev": null,
  "rotationKeys": [
    "did:key:zQ3shY1MSQTZoXD1PSpajVb7HvBsHAuJiEP95BqBkSX1mceyB",
    "did:key:zDnaephDd6zZLC3S9xsSnkuyxK91mbf4geNSfnj3LqZefaXi3",
  ],
  "services": {
    "atproto_pds": {
      "endpoint": "https://example.com",
      "type": "AtprotoPersonalDataServer",
    },
  },
  "sig": "L-krf_o8_KJWT6-Q1e2W-RFbRD7w15dW_NKrkm_cL-5QG4k_psbpqJ_1OHbj04qjpvOprACPsW8GeX-nRSC00A",
  "type": "plc_operation",
  "verificationMethods": {
    "atproto": "did:key:zQ3shnmQycqm84MhLHTJfuaJhC2jfwJiYzizxLabWNFbiymQT",
  },
}
`;

exports[`did-ckb-ts it should re-create the local id extension example: witness 1`] = `
{
  "localIdAuthorization": {
    "history": [
      "0xa76373696778564c2d6b72665f6f385f4b4a5754362d51316532572d52466252443777313564575f4e4b726b6d5f634c2d355147346b5f70736270714a5f314f48626a3034716a70764f70724143507357384765582d6e5253433030416470726576f664747970656d706c635f6f7065726174696f6e687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747368747470733a2f2f6578616d706c652e636f6d6b616c736f4b6e6f776e4173817661743a2f2f616c6963652e6578616d706c652e636f6d6c726f746174696f6e4b6579738278396469643a6b65793a7a5133736859314d5351545a6f584431505370616a566237487642734841754a69455039354271426b5358316d6365794278396469643a6b65793a7a446e616570684464367a5a4c433353397873536e6b7579784b39316d62663467654e53666e6a334c715a65666158693373766572696669636174696f6e4d6574686f6473a167617470726f746f78396469643a6b65793a7a513373686e6d517963716d38344d684c48544a6675614a6843326a66774a69597a697a784c6162574e466269796d5154",
    ],
    "rotationKeyIndices": [
      "0x0",
      "0x0",
    ],
    "sig": "0x0b870938facdec00272e48435fde929beb2194cf32374ff5de6e678c572319d100aa175c346eda92d54fac45b84a4160f0a7808c4f4106b82f041cba3baf1b87",
  },
}
`;

exports[`did-ckb-ts it should re-create the spec example: creation-tx 1`] = `
{
  "cellDeps": [
    {
      "depType": "code",
      "outPoint": {
        "index": "0x0",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
    {
      "depType": "code",
      "outPoint": {
        "index": "0x1",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
  ],
  "headerDeps": [],
  "inputs": [
    {
      "previousOutput": {
        "index": "0x2",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
      "since": "0x0",
    },
  ],
  "outputs": [
    {
      "capacity": "0x258",
      "lock": {
        "args": "0x",
        "codeHash": "0x3dc9cdb5b2dcff8d4999004406558d4456ecf0f14c757ca353684c0bd4d3b50d",
        "hashType": "type",
      },
      "type": {
        "args": "0x8434cfe81aa825c275d513eee20e4235294e3420",
        "codeHash": "0xb95123c71a870e3f0f74a7ee1dab8268dbfbc1407b46733ebd1b41f854b4324a",
        "hashType": "type",
      },
    },
  ],
  "outputsData": [
    "0x00000000b40000000c000000b4000000a4000000a3687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747468747470733a2f2f6578616d706c652e746573746b616c736f4b6e6f776e4173816f61743a2f2f616c6963652e7465737473766572696669636174696f6e4d6574686f6473a167617470726f746f736469643a6b65793a7a5369676e696e674b6579",
  ],
  "version": "0x0",
  "witnesses": [],
}
`;

exports[`did-ckb-ts it should re-create the spec example: creation-tx-hash 1`] = `"0xe54bb705cea6e500767ed4c0ba9ee92cad71e6b39c55283591147c5d10cc12b5"`;

exports[`did-ckb-ts it should re-create the spec example: data0 1`] = `
Extended {
  "type": "DidCkbDataV1",
  "value": Extended {
    "document": "0xa3687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747468747470733a2f2f6578616d706c652e746573746b616c736f4b6e6f776e4173816f61743a2f2f616c6963652e7465737473766572696669636174696f6e4d6574686f6473a167617470726f746f736469643a6b65793a7a5369676e696e674b6579",
    "localId": undefined,
  },
}
`;

exports[`did-ckb-ts it should re-create the spec example: data1 1`] = `
Extended {
  "type": "DidCkbDataV1",
  "value": Extended {
    "document": "0xa3687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747468747470733a2f2f6578616d706c652e746573746b616c736f4b6e6f776e4173816d61743a2f2f626f622e7465737473766572696669636174696f6e4d6574686f6473a167617470726f746f736469643a6b65793a7a5369676e696e674b6579",
    "localId": undefined,
  },
}
`;

exports[`did-ckb-ts it should re-create the spec example: deactivation-tx 1`] = `
{
  "cellDeps": [
    {
      "depType": "code",
      "outPoint": {
        "index": "0x0",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
    {
      "depType": "code",
      "outPoint": {
        "index": "0x1",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
  ],
  "headerDeps": [],
  "inputs": [
    {
      "previousOutput": {
        "index": "0x0",
        "txHash": "0x781140553ba39702e39f6d8c851512549c7b930e1cb34200ab2e1b73354eccbb",
      },
      "since": "0x0",
    },
  ],
  "outputs": [
    {
      "capacity": "0x256",
      "lock": {
        "args": "0x",
        "codeHash": "0x3dc9cdb5b2dcff8d4999004406558d4456ecf0f14c757ca353684c0bd4d3b50d",
        "hashType": "type",
      },
    },
  ],
  "outputsData": [
    "0x",
  ],
  "version": "0x0",
  "witnesses": [],
}
`;

exports[`did-ckb-ts it should re-create the spec example: update-tx 1`] = `
{
  "cellDeps": [
    {
      "depType": "code",
      "outPoint": {
        "index": "0x0",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
    {
      "depType": "code",
      "outPoint": {
        "index": "0x1",
        "txHash": "0x1ecbf88d692a14d7cbc0bfd1a3d5019e4b613247ae438bad52f94148c6009559",
      },
    },
  ],
  "headerDeps": [],
  "inputs": [
    {
      "previousOutput": {
        "index": "0x0",
        "txHash": "0xe54bb705cea6e500767ed4c0ba9ee92cad71e6b39c55283591147c5d10cc12b5",
      },
      "since": "0x0",
    },
  ],
  "outputs": [
    {
      "capacity": "0x257",
      "lock": {
        "args": "0x",
        "codeHash": "0x3dc9cdb5b2dcff8d4999004406558d4456ecf0f14c757ca353684c0bd4d3b50d",
        "hashType": "type",
      },
      "type": {
        "args": "0x8434cfe81aa825c275d513eee20e4235294e3420",
        "codeHash": "0xb95123c71a870e3f0f74a7ee1dab8268dbfbc1407b46733ebd1b41f854b4324a",
        "hashType": "type",
      },
    },
  ],
  "outputsData": [
    "0x00000000b20000000c000000b2000000a2000000a3687365727669636573a16b617470726f746f5f706473a264747970657819417470726f746f506572736f6e616c4461746153657276657268656e64706f696e747468747470733a2f2f6578616d706c652e746573746b616c736f4b6e6f776e4173816d61743a2f2f626f622e7465737473766572696669636174696f6e4d6574686f6473a167617470726f746f736469643a6b65793a7a5369676e696e674b6579",
  ],
  "version": "0x0",
  "witnesses": [],
}
`;

exports[`did-ckb-ts it should re-create the spec example: update-tx-hash 1`] = `"0x781140553ba39702e39f6d8c851512549c7b930e1cb34200ab2e1b73354eccbb"`;
